--- a/test-output/old/Suite/methods.html
+++ b/test-output/old/Suite/methods.html
@@ -1,10 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="82edab">  <td>15/02/14 15:10:22</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;SignUpTest.setUp()[pri:0, instance:com.google.SignUpTest.SignUpTest@1c12050]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@6596721</td>   <td></td> </tr>
-<tr bgcolor="82edab">  <td>15/02/14 15:10:25</td>   <td>3479</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SignUpTest.signUp()[pri:0, instance:com.google.SignUpTest.SignUpTest@1c12050]">signUp</td> 
-  <td>main@6596721</td>   <td></td> </tr>
-<tr bgcolor="82edab">  <td>15/02/14 15:10:50</td>   <td>28888</td> <td>&nbsp;</td><td title="&lt;&lt;SignUpTest.closeInstances()[pri:0, instance:com.google.SignUpTest.SignUpTest@1c12050]">&lt;&lt;closeInstances</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@6596721</td>   <td></td> </tr>
+<tr bgcolor="fb78af">  <td>15/02/22 12:28:28</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;SignUpTest.init(java.lang.String)[pri:0, instance:com.google.SignUpTest.SignUpTest@1727596]">&gt;&gt;init</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@17875688</td>   <td></td> </tr>
+<tr bgcolor="fb78af">  <td>15/02/22 12:28:37</td>   <td>9297</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SignUpTest.signUp()[pri:0, instance:com.google.SignUpTest.SignUpTest@1727596]">signUp</td> 
+  <td>main@17875688</td>   <td></td> </tr>
+<tr bgcolor="fb78af">  <td>15/02/22 12:28:59</td>   <td>31577</td> <td>&nbsp;</td><td title="&lt;&lt;SignUpTest.close()[pri:0, instance:com.google.SignUpTest.SignUpTest@1727596]">&lt;&lt;close</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@17875688</td>   <td></td> </tr>
 </table>
