--- a/test-output/index.html
+++ b/test-output/index.html
@@ -142,7 +142,7 @@
 &lt;!DOCTYPE suite SYSTEM &quot;http://testng.org/testng-1.0.dtd&quot;&gt;
 &lt;suite name=&quot;Suite&quot; parallel=&quot;none&quot;&gt;
   &lt;test name=&quot;Test&quot;&gt;
-    &lt;parameter name=&quot;browser&quot; value=&quot;firefox&quot;/&gt;
+    &lt;parameter name=&quot;browser&quot; value=&quot;chrome&quot;/&gt;
     &lt;classes&gt;
       &lt;class name=&quot;com.google.SignUpTest.SignUpTest&quot;/&gt;
     &lt;/classes&gt;
@@ -188,12 +188,12 @@ data.addRows(1);
 data.setCell(0, 0, 0)
 data.setCell(0, 1, 'signUp')
 data.setCell(0, 2, 'com.google.SignUpTest.SignUpTest')
-data.setCell(0, 3, 22276);
+data.setCell(0, 3, 15816);
 window.suiteTableData['Suite']= { tableData: data, tableDiv: 'times-div-Suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 22 seconds</span>
+              <span class="suite-total-time">Total running time: 15 seconds</span>
               <div id="times-div-Suite">
               </div> <!-- times-div-Suite -->
             </div> <!-- times-div -->
@@ -221,16 +221,16 @@ return data;
             <div class="chronological-class">
               <div class="chronological-class-name">com.google.SignUpTest.SignUpTest</div> <!-- chronological-class-name -->
               <div class="configuration-test before">
-                <span class="method-name">init(firefox)</span>
+                <span class="method-name">init(chrome)</span>
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-test before -->
               <div class="test-method">
                 <span class="method-name">signUp</span>
-                <span class="method-start">9303 ms</span>
+                <span class="method-start">5674 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-test after">
                 <span class="method-name">close</span>
-                <span class="method-start">31583 ms</span>
+                <span class="method-start">21493 ms</span>
               </div> <!-- configuration-test after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
