--- a/test-output/old/Suite/methods-alphabetical.html
+++ b/test-output/old/Suite/methods-alphabetical.html
@@ -1,10 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="ea7881">  <td>15/03/02 22:50:54</td>   <td>0</td> <td>&nbsp;</td><td title="&lt;&lt;SignUpTest.close()[pri:0, instance:com.google.SignUpTest.SignUpTest@156cd93]">&lt;&lt;close</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@714549</td>   <td></td> </tr>
-<tr bgcolor="ea7881">  <td>15/03/02 22:50:33</td>   <td>-21488</td> <td>&nbsp;</td><td title="&gt;&gt;SignUpTest.init(java.lang.String)[pri:0, instance:com.google.SignUpTest.SignUpTest@156cd93]">&gt;&gt;init</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@714549</td>   <td></td> </tr>
-<tr bgcolor="ea7881">  <td>15/03/02 22:50:38</td>   <td>-15819</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SignUpTest.signUp()[pri:0, instance:com.google.SignUpTest.SignUpTest@156cd93]">signUp</td> 
-  <td>main@714549</td>   <td></td> </tr>
+<tr bgcolor="98746b">  <td>15/03/26 09:11:49</td>   <td>0</td> <td>&nbsp;</td><td title="&lt;&lt;SignUpTest.close()[pri:0, instance:com.google.SignUpTest.SignUpTest@1b2e165]">&lt;&lt;close</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@24138346</td>   <td></td> </tr>
+<tr bgcolor="98746b">  <td>15/03/26 09:11:34</td>   <td>-15543</td> <td>&nbsp;</td><td title="&gt;&gt;SignUpTest.init(java.lang.String)[pri:0, instance:com.google.SignUpTest.SignUpTest@1b2e165]">&gt;&gt;init</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@24138346</td>   <td></td> </tr>
+<tr bgcolor="98746b">  <td>15/03/26 09:11:39</td>   <td>-9991</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SignUpTest.signUp()[pri:0, instance:com.google.SignUpTest.SignUpTest@1b2e165]">signUp</td> 
+  <td>main@24138346</td>   <td></td> </tr>
 </table>
